--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@
 
 dapla-js-utilities/
 dapla-workbench/
-dapla-catalog-viewer/
-dapla-lineage-viewer/
-dapla-variable-search/
+dapla-migration-webclient/
 dapla-metadata-explorer/
 dapla-metadata-webview/
 dapla-user-access-admin/
